<!DOCTYPE resources [
    <!ENTITY TERMUX_PACKAGE_NAME "com.termux">
    <!ENTITY TERMUX_APP_NAME "Termux">
    <!ENTITY TERMUX_X11_APP_NAME "Termux:X11">
    ]>
<resources>
    <string name="x11_app_name">&TERMUX_X11_APP_NAME;</string>
    <string name="settings">Settings</string>
    <string name="exit_button_text">EXIT</string>
    <string name="lorie_notification_content_text">Pull down to show options</string>
    <string name="lorie_notification_open_preferences">Settings</string>
    <string name="lorie_notification_exit">Exit</string>
    <string name="lorie_notification_restart_activity">Restart</string>
    <string name="lorie_notification_toggle_soft_keyboard">Toggle IME</string>
    <string name="lorie_notification_toggle_additional_key_bar">Toggle additional keyboard</string>
    <string name="lorie_notification_release_pointer_and_keyboard_capture">Release captures</string>
    <string name="lorie_pref_main">Settings</string>
    <string name="lorie_pref_output">Output</string>
    <string name="lorie_pref_pointer">Pointer</string>
    <string name="lorie_pref_kbd">Keyboard</string>
    <string name="lorie_pref_other">Other</string>
    <string name="lorie_pref_displayResolutionMode">Display resolution mode</string>
    <string name="lorie_pref_displayScale">Display scale, %</string>
    <string name="lorie_pref_displayResolutionExact">Display resolution</string>
    <string name="lorie_pref_displayResolutionCustom">Display resolution</string>
    <string name="lorie_pref_displayFilteringMode">Display filtering mode</string>
    <string name="lorie_pref_adjustResolution">Adjust the set resolution to fit screen orientation</string>
    <string name="lorie_pref_displayStretch">Stretch to fit display</string>
    <string name="lorie_pref_Reseed">Reseed screen while soft keyboard is open</string>
    <string name="lorie_pref_Reseed_summary">The screen size will be adjusted while Soft Keyboard is open.</string>
    <string name="lorie_pref_PIP">PIP mode</string>
    <string name="lorie_pref_PIP_summary">Show app in picture-in-picture mode when home button or recents button is pressed</string>
    <string name="lorie_pref_fullscreen">Fullscreen</string>
    <string name="lorie_pref_fullscreen_summary">Toggle immersive mode in your device display</string>
    <string name="lorie_pref_forceOrientation">Screen orientation</string>
    <string name="lorie_pref_hideCutout">Hide display cutout (if any)</string>
    <string name="lorie_pref_keepScreenOn">Keep Screen On</string>
    <string name="lorie_pref_touchMode">Touchscreen input mode</string>
    <string name="lorie_pref_scaleTouchpad">Apply display scale factor to touchpad</string>
    <string name="lorie_pref_stylusIsMouse">Enable stylus mouse mode</string>
    <string name="lorie_pref_stylusIsMouse_summary">Make your stylus work like a mouse. When activated, stylus will only move the cursor and send mouse clicks, ignoring pressure, angle, and tilt.</string>
    <string name="lorie_pref_stylusButtonContactModifierMode">Stylus button contact modifier mode</string>
    <string name="lorie_pref_stylusButtonContactModifierMode_summary">Enable this option to send right or middle mouse buttons only when stylus touches the screen while the button is pressed.</string>
    <string name="lorie_pref_pointerCapture">Capture external pointer devices when possible</string>
    <string name="lorie_pref_pointerCapture_summary">Intercept all hardware pointer events. Pointer is back to Android after pressing Escape key.</string>
    <string name="lorie_pref_transformCapturedPointer">Transform captured pointer movements</string>
    <string name="lorie_pref_capturedPointerSpeedFactor">Captured pointer speed factor, %</string>
    <string name="lorie_pref_tapToMove">Enable tap-to-move for touchpads</string>
    <string name="lorie_pref_ignoreGamepadEvents">Ignore gamepad input events</string>
    <string name="lorie_pref_ignoreGamepadEvents_summary">Prevent gamepad and joystick events from being forwarded to X server</string>
    <string name="lorie_pref_showAdditionalKbd">Show additional keyboard</string>
    <string name="lorie_pref_showAdditionalKbd_summary">Show keyboard with additional keys.</string>
    <string name="lorie_pref_showIMEWhileExternalConnected">Show IME with external keyboard</string>
    <string name="lorie_pref_showIMEWhileExternalConnected_summary">Show software keyboard while hardware keyboard is connected.</string>
    <string name="lorie_pref_preferScancodes">Prefer scancodes when possible</string>
    <string name="lorie_pref_preferScancodes_summary">Let X server handle hardware keyboard layout (with DE settings or setxkbmap).</string>
    <string name="lorie_pref_hardwareKbdScancodesWorkaround">Hardware keyboard scancodes workaround</string>
    <string name="lorie_pref_hardwareKbdScancodesWorkaround_summary">Fixes scancodes on some devices. Might cause problems with multiple layouts.</string>
    <string name="lorie_pref_dexMetaKeyCapture">Intercept system shortcuts</string>
    <string name="lorie_pref_dexMetaKeyCapture_summary">Samsung Dex only. Allows interception of &quot;Alt+F4&quot;, &quot;Meta+D&quot;, &quot;Meta+E&quot;, etc.</string>
    <string name="lorie_pref_enforceCharBasedInput">Enforce char based input</string>
    <string name="lorie_pref_enforceCharBasedInput_summary">Suppresses suggestions, predictive typing and CJK languages</string>
    <string name="lorie_pref_clipboardEnable">Clipboard sharing</string>
    <string name="lorie_pref_requestNotificationPermission">Request notification permission</string>
    <string name="lorie_pref_summary_requiresExactOrCustom">Requires "display resolution mode" to be "exact" or "custom"</string>
    <string name="lorie_pref_summary_requiresTrackpadAndNative">Requires "Touchscreen input mode" to be "Trackpad" and "Display resolution mode" to be not "native"</string>
    <string name="lorie_touchMode_trackpad">Trackpad</string>
    <string name="lorie_touchMode_simulated">Simulated touchscreen</string>
    <string name="lorie_touchMode_direct">Direct touch</string>
    <string name="lorie_displayResolution_native">native</string>
    <string name="lorie_displayResolution_scaled">scaled</string>
    <string name="lorie_displayResolution_exact">exact</string>
    <string name="lorie_displayResolution_custom">custom</string>
    <string name="lorie_displayFiltering_bilinear">bilinear</string>
    <string name="lorie_displayFiltering_nearest">nearest</string>
    <string name="lorie_transformCapturedPointer_no">No</string>
    <string name="lorie_transformCapturedPointer_cw">Clockwise</string>
    <string name="lorie_transformCapturedPointer_cc">Counter clockwise</string>
    <string name="lorie_transformCapturedPointer_ud">Upside down</string>
    <string name="lorie_transformCapturedPointer_at">Automatic (for touchpad)</string>
    <string name="lorie_userAction_noAction">no action</string>
    <string name="lorie_userAction_toggleSoftKbd">toggle soft keyboard</string>
    <string name="lorie_userAction_toggleAdditionalKbd">toggle additional key bar</string>
    <string name="lorie_userAction_openPreferences">open settings</string>
    <string name="lorie_userAction_releaseCaptures">release pointer and keyboard capture</string>
    <string name="lorie_userAction_toggleFullscreen">toggle fullscreen</string>
    <string name="lorie_userAction_restartActivity">restart activity</string>
    <string name="lorie_userAction_exit">exit</string>
    <string name="lorie_orientation_auto">auto</string>
    <string name="lorie_orientation_portrait">portrait</string>
    <string name="lorie_orientation_landscape">landscape</string>
    <string name="lorie_orientation_reversePortrait">reverse portrait</string>
    <string name="lorie_orientation_reverseLandscape">reverse landscape</string>
    <string name="lorie_toast_wrong_resolution_format">Wrong resolution format</string>
    <string name="lorie_error_native_library_load">Failed to load native library. Did you install the right apk? Try the universal one.</string>
</resources>
