<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen app:key="main" app:title="@string/lorie_pref_main">
        <Preference app:title="@string/lorie_pref_output" app:fragment="output" />
        <Preference app:title="@string/lorie_pref_pointer" app:fragment="pointer" />
        <Preference app:title="@string/lorie_pref_kbd" app:fragment="kbd" />
        <Preference app:title="@string/lorie_pref_other" app:fragment="other" />
    </PreferenceScreen>
    <PreferenceScreen app:key="output">
        <ListPreference app:key="displayResolutionMode" app:defaultValue="native" app:entries="@array/displayResolutionVariantsEntries" app:entryValues="@array/displayResolutionVariants"  />
        <SeekBarPreference app:key="displayScale" app:defaultValue="200" app:min="30" android:max="300" app:seekBarIncrement="10" app:showSeekBarValue="true" app:updatesContinuously="true" />
        <ListPreference app:key="displayResolutionExact" app:defaultValue="1280x1024" app:entries="@array/displayResolution" app:entryValues="@array/displayResolution" tools:ignore="DuplicateSpeakableTextCheck" />
        <EditTextPreference app:key="displayResolutionCustom" app:defaultValue="1280x1024" app:useSimpleSummaryProvider="true" />
        <ListPreference app:key="displayFilteringMode" app:defaultValue="nearest" app:entries="@array/displayFilteringVariantsEntries" app:entryValues="@array/displayFilteringVariants"  />
        <SwitchPreferenceCompat app:key="adjustResolution" app:defaultValue="false" />
        <SwitchPreferenceCompat app:key="displayStretch" app:defaultValue="false" />
        <SwitchPreferenceCompat app:key="Reseed" app:defaultValue="true" />
        <SwitchPreferenceCompat app:key="PIP" app:defaultValue="true" />
        <SwitchPreferenceCompat app:key="fullscreen" app:defaultValue="true" />
        <ListPreference app:key="forceOrientation" app:defaultValue="landscape" app:entries="@array/forceOrientationVariantsEntries" app:entryValues="@array/forceOrientationVariants" />
        <SwitchPreferenceCompat app:key="hideCutout" app:defaultValue="true" />
        <SwitchPreferenceCompat app:defaultValue="true" app:key="keepScreenOn" />
    </PreferenceScreen>
    <PreferenceScreen app:key="pointer">
        <ListPreference app:key="touchMode" app:defaultValue="3" app:entries="@array/touchscreenInputModesEntries" app:entryValues="@array/touchscreenInputModesValues" />
        <SwitchPreferenceCompat app:key="scaleTouchpad" app:defaultValue="false" />
        <SwitchPreferenceCompat app:key="stylusIsMouse" app:defaultValue="false" />
        <SwitchPreferenceCompat app:key="stylusButtonContactModifierMode" app:defaultValue="false" />
        <SwitchPreferenceCompat app:key="pointerCapture" app:defaultValue="true" />
        <ListPreference app:key="transformCapturedPointer" app:defaultValue="no" app:entries="@array/transformCapturedPointerEntries" app:entryValues="@array/transformCapturedPointerValues" />
        <SeekBarPreference app:key="capturedPointerSpeedFactor" app:defaultValue="100" app:min="1" android:max="300" app:seekBarIncrement="1" app:showSeekBarValue="true" app:updatesContinuously="true" />
        <SwitchPreferenceCompat app:key="tapToMove" app:defaultValue="false" />
        <SwitchPreferenceCompat app:key="ignoreGamepadEvents" app:defaultValue="false" />
    </PreferenceScreen>
    <PreferenceScreen app:key="kbd">
        <SwitchPreferenceCompat app:key="showAdditionalKbd" app:defaultValue="true" />
        <!-- this preference should be a part of `Prefs` but should not appear in PreferenceScreen -->
        <SwitchPreferenceCompat app:key="additionalKbdVisible" app:defaultValue="true" app:isPreferenceVisible="false" />
        <SwitchPreferenceCompat app:key="showIMEWhileExternalConnected" app:defaultValue="true" />
        <SwitchPreferenceCompat app:key="preferScancodes" app:defaultValue="false" />
        <SwitchPreferenceCompat app:key="hardwareKbdScancodesWorkaround" app:defaultValue="true" />
        <SwitchPreferenceCompat app:key="dexMetaKeyCapture" app:defaultValue="false" />
        <SwitchPreferenceCompat app:key="enforceCharBasedInput" app:defaultValue="false" />
    </PreferenceScreen>
    <PreferenceScreen app:key="other">
        <SwitchPreferenceCompat app:key="clipboardEnable" app:defaultValue="true" />
        <Preference app:key="requestNotificationPermission" />
        <ListPreference app:key="notificationTapAction" app:defaultValue="open preferences" app:entries="@array/userActionsValuesEntries" app:entryValues="@array/userActionsValues" app:isPreferenceVisible="false" />
        <ListPreference app:key="notificationButton0Action" app:defaultValue="open preferences" app:entries="@array/userActionsValuesEntries" app:entryValues="@array/userActionsValues" app:isPreferenceVisible="false" />
        <ListPreference app:key="notificationButton1Action" app:defaultValue="exit" app:entries="@array/userActionsValuesEntries" app:entryValues="@array/userActionsValues" app:isPreferenceVisible="false" />
    </PreferenceScreen>
</PreferenceScreen>
